@@ -88,7 +88,4 @@ ASM_NAME(getcpuflags):
 	popl %ebp
 	ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
